[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[features]
default = []
test = []

[dependencies]
buddy_system_allocator = "0.10.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4"
xmas-elf = "0.7.0"
bitflags = "2.6.0"
zerocopy = { version = "0.7.35", features = ["derive"] }

virtio-drivers = { git = "https://github.com/li041/virtio-drivers", branch = 'lxh'}
memoffset = "0.9.1"
hashbrown = "0.15.2"


num_enum = { version="0.5", default-features = false }

spin = "0.7"

embedded-hal = "=1.0.0-alpha.7"
nb = "1.0"
bit_field = "0.10.2"
fdt = "0.1.5"

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[profile.release]
debug = true