[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[features]
default = []
test = []

[dependencies]
buddy_system_allocator = "0.11.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4"
xmas-elf = "0.7.0"
bitflags = "2.6.0"
zerocopy = { version = "0.7.35", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
virtio-drivers = { git = "https://github.com/li041/virtio-drivers", branch = 'lxh'}
memoffset = "0.9.1"
hashbrown = "0.15.2"
fdt = "0.1.5"
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }

num_enum = { version="0.5", default-features = false }
spin = "0.7"
cfg-if = "1.0"

hmac = { version = "0.12", default-features = false }

embedded-hal = "=1.0.0-alpha.7"
nb = "1.0"
bit_field = "0.10.2"
lazyinit="0.2.1"
[dependencies.smoltcp]
git = "https://github.com/BiorelaxA/smoltcp.git"
branch = "main"
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "medium-ip",
  "proto-ipv4",
  "proto-ipv6",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns", "proto-igmp",
  #"fragmentation-buffer-size-65536", "proto-ipv4-fragmentation",
  #"reassembly-buffer-size-65536", "reassembly-buffer-count-32",
  #"assembler-max-segment-count-32",
]

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[profile.release]
debug = true